Bug: testing to see if latex will render

--- a/Regression/Linear_Regression.ipynb
+++ b/Regression/Linear_Regression.ipynb
@@ -36,29 +36,29 @@
     "which is a function of $\\beta_0, \\beta_1$and our goal is to find the parameters $\\hat{\\beta_0},\\hat{\\beta_1}$ that minimize the $SSE$ function.\n",
     "\n",
     "To find the minima of $SSE$ with respect to $\\beta_0,\\beta_1$ we use calculus:\n",
-    "\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\frac{\\partial}{\\partial \\beta_0}SSE(\\beta_0,\\beta_1) \n",
     "&= \\sum_{i=1}^N \\frac{\\partial}{\\partial \\beta_0}(y_i - \\beta_0 - \\beta_1 x_i)^2 = -2\\sum_{i=1}^N(y_i - \\beta_0 - \\beta_1 x_i) %\\hspace{5cm} &(1)%\n",
     "\\\\\n",
     "\\frac{\\partial}{\\partial \\beta_1}SSE(\\beta_0,\\beta_1) &= \\sum_{i=1}^N \\frac{\\partial}{\\partial \\beta_0}(y_i - \\beta_0 - \\beta_1 x_i)^2 = -2\\sum_{i=1}^N(x_i y_i - x_i\\beta_0 - \\beta_1 x_i^2) %\\hspace{5cm} &(2).\n",
-    "\\end{align}\n",
+    "\\end{align}$$\n",
     "\n",
     "Now we set both derivatives equal to 0 and do some solving! Setting (1) equal to zero yields\n",
-    "\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\frac{\\partial}{\\partial \\beta_0}SSE(\\beta_0,\\beta_1) &= -2\\sum_{i=1}^N(y_i - \\beta_0 - \\beta_1 x_i) =0 \\\\\n",
     "&\\Longrightarrow \\sum_{i=1}^N y_i - \\sum_{i=1}^N \\beta_0 - \\beta_1 \\sum_{i=1}^N x_i = 0\\\\\n",
     "&\\Longrightarrow N\\beta_0 = \\sum_{i=1}^N y_i - \\beta_1 \\sum_{i=1}^N x_i \\\\\n",
     "&\\Longrightarrow \\beta_0 = \\frac{1}{N} \\sum_{i=1}^N y_i - \\beta_1 \\frac{1}{N}\\sum_{i=1}^N x_i \\\\\n",
     "&\\Longrightarrow \\beta_0 = \\bar{y} - \\beta_1 \\bar{x}. %\\hspace{10cm} (3)\n",
-    "\\end{align}\n",
+    "\\end{align}$$\n",
     "\n",
     "Setting (2) equal to zero and substituting (3) into (2) we get\n",
-    "\\begin{align}\n",
+    "$$\\begin{align}\n",
     "\\frac{\\partial}{\\partial \\beta_1}SSE(\\beta_0,\\beta_1) &= -2\\sum_{i=1}^N(x_i y_i - x_i\\beta_0 - \\beta_1 x_i^2) = 0 \\\\\n",
     "&\\Longrightarrow \\sum_{i=1}^N x_i y_i - (\\bar{y} - \\beta_1 \\bar{x}) \\sum_{i=1}^N x_i - \\beta_1 \\sum_{i=1}^N x_i^2 = 0 \\\\\n",
     "&\\Longrightarrow \\sum_{i=1}^N x_i y_i - \\bar{y}\\sum_{i=1}^N x_i - \\beta_1\\left(\\bar{x}\\sum_{i=1}^N x_i - \\sum_{i=1}^N x_i^2\\right) = 0 \\\\\n",
     "&\\Longrightarrow \\beta_1 = \\frac{\\sum_{i=1}^N x_i y_i - \\frac{1}{N}\\sum_{i=1}^N x_i y_i}{\\frac{1}{N}\\sum_{i=1}^N x_i - \\sum_{i=1}^N x_i^2} = \\frac{Cov(X,Y)}{Var(X)}\n",
-    "\\end{align}"
+    "\\end{align}$$"
    ]
   },
   {
