Add Logistic Regression

--- a/Regression/Linear_Regression.ipynb
+++ b/Regression/Linear_Regression.ipynb
@@ -15,8 +15,8 @@
     "\n",
     "Suppose we are given some data $x = (x_1,x_2,\\cdots,x_n), \\ y = (y_1,y_2,\\cdots,y_n)$ and we are tasked with finding a continuous approximation of this discrete data set. In other words we are looking for a linear function $f(x) = \\beta_0 + \\beta_1 x$ such that $f(x)$ approximates the original data. How can we do this? \n",
     "\n",
-    "Well as a first approach we might try and make an educated guess for what the slope, $\\beta$, of the line $f(x)$ should be. To do so we find the expected value of the transformed data $\\Delta y, \\Delta x$, where $\\Delta y = (y_2-y_1,\\cdots, y_n-y_{n-1})$ and similarly for $x$. Symbolically we have \n",
-    "$$\\hat{\\beta} = \\frac{1}{n-1}\\sum_{i=1}^n \\Delta x_i \\Delta y_i = \\frac{1}{n-1}\\Big((x_2-x_1)(y_2-y_1) + (x_3-x_2)(y_3-y_2) + \\cdots + (x_n - x_{n-1})(y_n - y_{n-1})\\Big)$$\n",
+    "Well as a first approach we might try and make an educated guess for what the slope, $\\beta_1$, of the line $f(x)$ should be. To do so we find the expected value of the transformed data $\\Delta y, \\Delta x$, where $\\Delta y = (y_2-y_1,\\cdots, y_n-y_{n-1})$ and similarly for $x$. Symbolically we have \n",
+    "$$\\hat{\\beta_1} = \\frac{1}{n-1}\\sum_{i=1}^n \\Delta x_i \\Delta y_i = \\frac{1}{n-1}\\Big((x_2-x_1)(y_2-y_1) + (x_3-x_2)(y_3-y_2) + \\cdots + (x_n - x_{n-1})(y_n - y_{n-1})\\Big)$$\n",
     "which acts as an approximation of the theoretical slope of a line that's \"close\" to the original data.\n",
     "\n",
     "Now that we have a guess for the slope to finish up we need to find the $y$-intercept for the function $f$. To do so we need to pick a candidate point for the line to pass through. One possible point to pick is \"center-of-mass\" point which is just the mean of the data points $x,y$ i.e. \n",
@@ -218,18 +218,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.77544612685281156"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance Score : 0.78\n"
+     ]
     }
    ],
    "source": [
@@ -240,7 +237,16 @@
     "RSS = sum((pred_val - test)**2)\n",
     "RSE = np.sqrt(RSS*(1/18.))\n",
     "TSS = sum((test-y_bar)**2)\n",
-    "1 - RSS/TSS\n"
+    "R2 = 1 - RSS/TSS\n",
+    "\n",
+    "print \"Variance Score : %r\" % round(R2,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have worked through a contrived example lets "
    ]
   }
  ],
