Add explanation to Logistic Regression

--- a/Regression/Logistic Regression.ipynb
+++ b/Regression/Logistic Regression.ipynb
@@ -8,13 +8,13 @@
     "Here we will briefly discuss the use cases and model structure of the logistic regression learning algorithm. We will then generate a toy data set from scratch and use the data to build a predictive model using binary logistic regression. Finally we will finish by building a multiple logisitic regression model using one of the standard data sets seen in many introductory examples, the Iris data set.\n",
     "\n",
     "## Brief Overview \n",
-    "Logistic regression is a generalization of the linear regression model (we will mention this in more detail in a bit) and is a more effective method when target (response) variables take on values in a discrete set. The most simple form of logistic regression is known as binary logistic regression and deals with the case when the target variables take on two discrete values, e.g. pass or fail, male or female, etc. In general, target variables need not take on only two discrete values, and the logistic regression technique can serve as a very effective model to perform prediction.\n",
+    "Logistic regression is a generalization of the linear regression model (we will mention this in more detail when we get to the math!) and is a more effective method when target (response) variables take on values in a discrete set. The most simple form of logistic regression is known as binary logistic regression and deals with the case when the target variables take on two discrete values, e.g. pass or fail, male or female, etc. In general, target variables need not take on only two discrete values, and the logistic regression technique can serve as a very effective model to perform prediction.\n",
     "\n",
     "## The Math\n",
-    "Suppose we are given the data $y = (y_0, \\cdots, y_N)$ and $X = (x_1, x_2,\\cdots, x_N)$ where $y$ is a target variable that takes on values in $\\{0,1\\}$ and $X$ is a prediction variable either taking on values in a discrete or continuous set (categorical or quantitative, respectively, in statistical learning terms). The goal is to build a model to use the data $X$ to predict the probability that $y=1$ or $y=0$ given our data. Note that to keep the analysis and notation simple we will work in the one dimensional case where we only have one predictor. This is not necessary in general, since the model generalizes to multiple dimensions in a straightforward manner. \n",
+    "Suppose we are given the data $y = (y_0, \\cdots, y_N)$ and $X = (x_1, x_2,\\cdots, x_N)$ where $y$ is a target variable such that each $y_i \\in \\{0,1\\}$ and $X$ is a prediction variable either taking on values in a discrete or continuous set (categorical or quantitative, respectively, in statistical learning terms). The goal is to build a model to use the data $X$ to predict the probability that $y_i=1$ or $y_i=0$ given the value of $x_i$. Note that to keep the analysis and notation simple we are working in the one dimensional case (so that we only have one predictor. This is not necessary in general, since the model generalizes to multiple dimensions in a straightforward manner. \n",
     "\n",
     "Formally we would like to build a model that allows us to estimate the probability functions\n",
-    "$$P(Y=1 | X = x ), \\ P(Y=0 |X = x ).$$\n",
+    "$$P(y_i=1 | X = x_i ), \\ P(y_i=0 |X = x_i ).$$\n",
     "Jumping straight to the punch and pulling the rabbit out of the hat we assume that the probability distribution function $f(X)$ is defined as follows:\n",
     "$$f(X) = \\frac{e^{\\beta_0 + \\beta_1 X}}{1 + e^{\\beta_0 + \\beta_1 X}}.$$\n",
     "\n",
@@ -30,7 +30,7 @@
     "$$\\ell(\\beta_0,\\beta_1) = \\prod_{i: y_i=1} f(x_i) \\prod_{i : y_i = 0}(1-f(x_i))$$\n",
     "It turns it this is an untractable problem to find a closed form solution, hence one must perform a numerical routine to compute the estimates. A common strategy is to use the Newton-Raphson method, but in our example we will use the routine implemented in Scikitlearn. \n",
     "\n",
-    "So let's get started!"
+    "So let's get started! In what follows we will generate a toy data set with $N=200$ observations and $P=3$ variables $X_1, X_2, Y$, where the $X_i$'s are quantitative predictors and $Y$ is the discrete response taking on values in ${0,1}$. Our goal will be to use a subset of the data to build a predictive model so that we can use a given $X_i$ to determine if the respective $Y_i$ is in fact a 0 or 1."
    ]
   },
   {
