--- a/Regression/Logistic Regression.ipynb
+++ b/Regression/Logistic Regression.ipynb
@@ -11,10 +11,10 @@
     "Logistic regression is a generalization of the linear regression model (we will mention this in more detail when we get to the math!) and is a more effective method when target (response) variables take on values in a discrete set. The most simple form of logistic regression is known as binary logistic regression and deals with the case when the target variables take on two discrete values, e.g. pass or fail, male or female, etc. In general, target variables need not take on only two discrete values, and the logistic regression technique can serve as a very effective model to perform prediction.\n",
     "\n",
     "## The Math\n",
-    "Suppose we are given the data $y = (y_0, \\cdots, y_N)$ and $X = (x_1, x_2,\\cdots, x_N)$ where $y$ is a target variable such that each $y_i \\in \\{0,1\\}$ and $X$ is a prediction variable either taking on values in a discrete or continuous set (categorical or quantitative, respectively, in statistical learning terms). The goal is to build a model to use the data $X$ to predict the probability that $y_i=1$ or $y_i=0$ given the value of $x_i$. Note that to keep the analysis and notation simple we are working in the one dimensional case (so that we only have one predictor. This is not necessary in general, since the model generalizes to multiple dimensions in a straightforward manner. \n",
+    "Suppose we are given the data $y = (y_0, \\cdots, y_N)$ and $X = (x_1, x_2,\\cdots, x_N)$ where $y$ is a target variable such that each $y_i \\in \\{0,1\\}$ and $X$ is a prediction variable either taking on values in a discrete or continuous set (categorical or quantitative, respectively, in statistical learning terms). The goal is to build a model to use the data $X$ to predict the probability that $y_i=1$ or $y_i=0$ given the value of $x_i$. Note that to keep the analysis and notation simple we are working in the one dimensional case (so that we only have one predictor). This is not necessary in general, since the model extends to multiple dimensions in a straightforward manner. \n",
     "\n",
     "Formally we would like to build a model that allows us to estimate the probability functions\n",
-    "$$P(y_i=1 | X = x_i ), \\ P(y_i=0 |X = x_i ).$$\n",
+    "$$P(y_i=1 | \\   x_i ), \\ P(y_i=0 | \\ x_i ).$$\n",
     "Jumping straight to the punch and pulling the rabbit out of the hat we assume that the probability distribution function $f(X)$ is defined as follows:\n",
     "$$f(X) = \\frac{e^{\\beta_0 + \\beta_1 X}}{1 + e^{\\beta_0 + \\beta_1 X}}.$$\n",
     "\n",
