Fix typo in Logistic Reg.

--- a/Classification/Logistic Regression.ipynb
+++ b/Classification/Logistic Regression.ipynb
@@ -178,9 +178,9 @@
     "After visualizing the data set we can see that $X_1$ appears to be a good predictor to determine whether or not the data is either purple or red (of course this is by construction, but it's an important part of the analysis!). We can see an approximate boundary line that separates the data somewhere between $X_1 = 4$ and $X_1=6$, which makes sense considering how we generated the data. Thus we will use $X_1$ to build our binary logistic regression model.\n",
     "\n",
     "Once we have estimated the coefficients $\\beta_0, \\beta_1$ we will determine the decision boundary by setting the probability function $f(X) = 0.5$ and solve for x: \n",
-    "$$ \\frac{e^{\\hat{\\beta}_0 + \\hat{\\beta}_1 x}}{1 + e^{\\hat{\\beta}_0 + \\hat{\\beta}_1 x}} = \\frac{1}{2}\n",
-    "\\Leftrightarrow \\hat{\\beta}_0 + \\hat{\\beta}_1 x = 0\n",
-    "\\Leftrightarrow x = \\frac{-\\hat{\\beta}_0}{\\hat{\\beta}_1}\n",
+    "$$ \\frac{e^{\\beta_0 + \\beta_1 x}}{1 + e^{\\beta_0 + \\beta_1 x}} = \\frac{1}{2}\n",
+    "\\Leftrightarrow \\beta_0 + \\beta_1 x = 0\n",
+    "\\Leftrightarrow x = \\frac{-\\beta_0}{\\beta_1}\n",
     "$$"
    ]
   },
@@ -463,11 +463,11 @@
     "## Building the Multiclass Logistic Regression Models\n",
     "Scikit learn implements two algorithms for multiclass logistic regression, the `one-vs-rest` and the `multinomial` schemes. Here we will make use of the multinomial logistic regression. The basic idea behind multinomial logistic regression is to write probability equations for each of the possible target classes and estimate the respective parameters as before:\n",
     "$$\\begin{align*}\n",
-    "P(Y=0) &= \\frac{e^{\\hat{\\beta}_{00} + \\hat{\\beta}_{10} x}}{\\sum_{i=0}^2 e^{\\hat{\\beta}_{0i} + \\hat{\\beta}_{1i} x}} \\\\\n",
-    "P(Y=1) &= \\frac{e^{\\hat{\\beta}_{01} + \\hat{\\beta}_{11} x}}{\\sum_{i=0}^2 e^{\\hat{\\beta}_{0i} + \\hat{\\beta}_{1i} x}} \\\\\n",
-    "P(Y=2) &= \\frac{e^{\\hat{\\beta}_{02} + \\hat{\\beta}_{12} x}}{\\sum_{i=0}^2 e^{\\hat{\\beta}_{0i} + \\hat{\\beta}_{1i} x}},\n",
+    "P(Y=0) &= \\frac{e^{\\beta_{00} + \\beta_{10} x}}{\\sum_{i=0}^2 e^{\\beta_{0i} + \\beta_{1i} x}} \\\\\n",
+    "P(Y=1) &= \\frac{e^{\\beta_{01} + \\beta_{11} x}}{\\sum_{i=0}^2 e^{\\beta_{0i} + \\beta_{1i} x}} \\\\\n",
+    "P(Y=2) &= \\frac{e^{\\beta_{02} + \\beta_{12} x}}{\\sum_{i=0}^2 e^{\\beta_{0i} + \\beta_{1i} x}},\n",
     "\\end{align*}$$\n",
-    "$\\hat{\\beta}_{0i} (i=0,1,2)$ refers to the estimated intercept parameter of the $i^{th}$ class and $\\hat{\\beta}_{1i}$ refers to the estimated slope parameter of the $i^{th}$ class. For a more thorough derivation see Wikipedia's [`Mutlinomial Logistic Regression`](https://en.wikipedia.org/wiki/Multinomial_logistic_regression#As_a_log-linear_model).\n",
+    "$\\beta_{0i} (i=0,1,2)$ refers to the estimated intercept parameter of the $i^{th}$ class and $\\beta_{1i}$ refers to the estimated slope parameter of the $i^{th}$ class. For a more thorough derivation see Wikipedia's [`Mutlinomial Logistic Regression`](https://en.wikipedia.org/wiki/Multinomial_logistic_regression#As_a_log-linear_model).\n",
     "\n",
     "Once we have estimated the parameters we can determine the decision boundaries $B_{ij}$ by setting the respective class probability equations equal to each other, i.e.\n",
     "$$B_{ij} := P(Y=i) = P(Y=j) \\Longrightarrow B_{ij} = \\frac{\\beta_{0j} - \\beta_{0i}}{\\beta_{1i} - \\beta_{1j}}$$\n",
